Server properties updated

--- a/app/src/main/assets/server.properties
+++ b/app/src/main/assets/server.properties
@@ -3,7 +3,7 @@ server.url=https://geohangman.herokuapp.com
 #server.url=http://192.168.0.10:8080
 users.url=/users
 challenges.url=/challenges
-friends.url=/friends
+friends.url=/%s/friends
 
 #Secure Keys
 secure.key=AIzaSyCyR4IkQCZpSwBElnLaxoLNUeqjt3XPRaE
