--- a/app/src/main/assets/server.properties
+++ b/app/src/main/assets/server.properties
@@ -1,11 +1,14 @@
-#Server URLs
-server.url=https://geohangman.herokuapp.com
-#server.url=http://192.168.0.10:8080
-users.url=/users
-challenges.url=/challenges
-friends.url=/%s/friends
-
 #Secure Keys
 secure.key=AIzaSyCyR4IkQCZpSwBElnLaxoLNUeqjt3XPRaE
 secure.param1=aajn88
 secure.param2=javeriana
+browser.key=AIzaSyByXzMhmynDC166rkbwc3-Fyvh7d1t1MFU
+
+#Server URLs
+server.url=https://geohangman.herokuapp.com
+#server.url=http://192.168.0.11:8080
+users.url=/users
+challenges.url=/challenges
+friends.url=/%s/friends
+registered_friends.url=/users/%s/registered-friends
+google.profile.picture.url=https://www.googleapis.com/plus/v1/people/%s?fields=image&key=
