Functionality added: Select a friend and send Challenge and Challenge Image to server On process: Retrieve challenge image from server

--- a/app/src/main/assets/server.properties
+++ b/app/src/main/assets/server.properties
@@ -5,10 +5,12 @@ secure.param2=javeriana
 browser.key=AIzaSyByXzMhmynDC166rkbwc3-Fyvh7d1t1MFU
 
 #Server URLs
-server.url=https://geohangman.herokuapp.com
-#server.url=http://192.168.0.11:8080
+#server.url=https://geohangman.herokuapp.com
+server.url=http://192.168.0.11:8080
 users.url=/users
 challenges.url=/challenges
+challenges_image.url=/challenges/images
+request_challenges_image.url=/challenges/%d/image
 friends.url=/%s/friends
 registered_friends.url=/users/%s/registered-friends
 google.profile.picture.url=https://www.googleapis.com/plus/v1/people/%s?fields=image&key=
