--- a/app/src/main/assets/server.properties
+++ b/app/src/main/assets/server.properties
@@ -5,10 +5,11 @@ secure.param2=javeriana
 browser.key=AIzaSyByXzMhmynDC166rkbwc3-Fyvh7d1t1MFU
 
 #Server URLs
-#server.url=https://geohangman.herokuapp.com
-server.url=http://192.168.0.11:8080
+server.url=https://geohangman.herokuapp.com
+#server.url=http://192.168.0.11:8080
 users.url=/users
 challenges.url=/challenges
+request_challenge.url=/challenges/%d
 challenges_image.url=/challenges/images
 request_challenges_image.url=/challenges/%d/image
 friends.url=/%s/friends
