--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 22
@@ -11,6 +12,13 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
+    compileOptions {
+        encoding "UTF-8"
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -29,7 +37,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'org.roboguice:roboguice:3.0'
     compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.google.android.gms:play-services:7.3.0'
+    compile 'com.google.android.gms:play-services:7.5.0'
     compile 'org.springframework.android:spring-android-rest-template:2.0.0.M1'
     compile 'commons-codec:commons-codec:1.10'
 }
