--- a/app/src/main/assets/server.properties
+++ b/app/src/main/assets/server.properties
@@ -5,13 +5,14 @@ secure.param2=javeriana
 browser.key=AIzaSyByXzMhmynDC166rkbwc3-Fyvh7d1t1MFU
 
 #Server URLs
-server.url=https://geohangman.herokuapp.com
-#server.url=http://192.168.0.11:8080
+#server.url=https://geohangman.herokuapp.com
+server.url=http://192.168.0.11:8080
 users.url=/users
 challenges.url=/challenges
 request_challenge.url=/challenges/%d
 challenges_image.url=/challenges/images
 request_challenges_image.url=/challenges/%d/image
 friends.url=/%s/friends
-registered_friends.url=/users/%s/registered-friends
+registered_friends.url=/%s/registered-friends
+token.url=/%s/token/%s
 google.profile.picture.url=https://www.googleapis.com/plus/v1/people/%s?fields=image&key=
