--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,13 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'org.roboguice:roboguice:3.0'
     compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.google.android.gms:play-services:7.5.0'
+    compile 'com.google.android.gms:play-services-maps:7.5.0'
+    compile 'com.google.android.gms:play-services-gcm:7.5.0'
+    compile 'com.google.android.gms:play-services-plus:7.5.0'
     compile 'org.springframework.android:spring-android-rest-template:2.0.0.M1'
     compile 'commons-codec:commons-codec:1.10'
+    compile 'com.j256.ormlite:ormlite-android:4.48'
+    compile 'com.j256.ormlite:ormlite-core:4.48'
 }
 
 repositories {
