--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,150 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    package="com.doers.games.geohangman"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.doers.games.geohangman" >
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="18"/>
+        android:targetSdkVersion="18" />
 
     <uses-feature
         android:name="android.hardware.camera2.full"
-        android:required="true"/>
+        android:required="true" />
     <uses-feature
         android:name="android.hardware.nfc"
-        android:required="true"/>
+        android:required="true" />
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <permission
         android:name="com.doers.games.geohangman.permission.C2D_MESSAGE"
-        android:protectionLevel="signature"/>
+        android:protectionLevel="signature" />
 
-    <uses-permission
-        android:name="com.doers.games.geohangman.permission.C2D_MESSAGE"/>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.USE_CREDENTIALS"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.NFC"/>
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="com.doers.games.geohangman.permission.C2D_MESSAGE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.NFC" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18"/>
+        android:maxSdkVersion="18" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:hardwareAccelerated="false" >
         <activity
             android:name=".controllers.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".controllers.challenger_activities.TakePicActivity"
             android:label="@string/title_activity_take_pic"
-            android:parentActivityName="roboguice.activity.RoboActivity">
+            android:parentActivityName="roboguice.activity.RoboActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="roboguice.activity.RoboActivity"/>
+                android:value="roboguice.activity.RoboActivity" />
         </activity>
 
         <meta-data
             android:name="roboguice.modules"
-            android:value="com.doers.games.geohangman.configuration.ConfigurationModule"/>
+            android:value="com.doers.games.geohangman.configuration.ConfigurationModule" />
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
+            android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="@string/google_maps_key"/>
+            android:value="@string/google_maps_key" />
 
         <activity
             android:name=".controllers.challenger_activities.SelectLocationHintActivity"
-            android:label="@string/title_activity_maps">
+            android:label="@string/title_activity_maps" >
         </activity>
         <activity
             android:name=".controllers.challenger_activities.TypeWordActivity"
-            android:label="@string/title_activity_type_word">
+            android:label="@string/title_activity_type_word" >
         </activity>
         <activity
             android:name=".controllers.challenger_activities.SendChallengeActivity"
-            android:label="@string/title_activity_send_challenge">
+            android:label="@string/title_activity_send_challenge" >
         </activity>
         <activity
             android:name=".controllers.opponent_activities.StartChallengeActivity"
-            android:label="@string/title_activity_start_challenge">
+            android:label="@string/title_activity_start_challenge" >
             <intent-filter>
-                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
 
-                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.DEFAULT" />
 
-                <data android:mimeType="application/com.doers.games.geohangman"/>
+                <data android:mimeType="application/com.doers.games.geohangman" />
             </intent-filter>
         </activity>
         <activity
             android:name=".controllers.MainMenuActivity"
             android:label="@string/title_activity_main_menu"
-            android:parentActivityName="roboguice.activity.RoboActivity">
+            android:parentActivityName="roboguice.activity.RoboActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="roboguice.activity.RoboActivity"/>
+                android:value="roboguice.activity.RoboActivity" />
         </activity>
         <activity
             android:name=".controllers.challenger_activities.SelectOpponentActivity"
             android:label="@string/title_activity_select_opponent"
-            android:parentActivityName="roboguice.activity.RoboActivity">
+            android:parentActivityName="roboguice.activity.RoboActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="roboguice.activity.RoboActivity"/>
+                android:value="roboguice.activity.RoboActivity" />
         </activity>
 
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
             android:exported="true"
-            android:permission="com.google.android.c2dm.permission.SEND">
+            android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
 
-                <category android:name="com.doers.games.geohangman"/>
+                <category android:name="com.doers.games.geohangman" />
 
-                <action android:name="com.google.android.c2dm.intent.REGISTRATION"/>
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
             </intent-filter>
         </receiver>
 
         <service
             android:name=".services.android_services.TokenIdIntentService"
             android:enabled="true"
-            android:exported="true">
+            android:exported="true" >
         </service>
         <service
             android:name=".services.android_services.GeohangmanInstanceIdService"
-            android:exported="false">
+            android:exported="false" >
             <intent-filter>
-                <action android:name="com.google.android.gms.iid.InstanceID"/>
+                <action android:name="com.google.android.gms.iid.InstanceID" />
             </intent-filter>
         </service>
 
-        <receiver android:name=".services.android_services.C2DMMessageReceiver"
-                  android:permission="com.google.android.c2dm.permission.SEND">
+        <receiver
+            android:name=".services.android_services.C2DMMessageReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE"></action>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+
                 <category android:name="com.doers.games.geohangman" />
             </intent-filter>
         </receiver>
 
+        <service
+            android:name=".services.android_services.UploadChallengeService"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
     </application>
 
 </manifest>
