Switching to real server

--- a/app/src/main/assets/server.properties
+++ b/app/src/main/assets/server.properties
@@ -5,8 +5,8 @@ secure.param2=javeriana
 browser.key=AIzaSyByXzMhmynDC166rkbwc3-Fyvh7d1t1MFU
 
 #Server URLs
-#server.url=https://geohangman.herokuapp.com
-server.url=http://192.168.0.6:8080
+server.url=https://geohangman.herokuapp.com
+#server.url=http://192.168.0.6:8080
 #server.url=http://10.151.20.236:8080
 users.url=/users
 challenges.url=/challenges
